--- a/webpage.html
+++ b/webpage.html
@@ -10,6 +10,7 @@
                 <li><a href="webpage.html" class="pressed">about us and our product</a></li>
                 <li><a href="https://www.amazon.com/Echo-Frames/dp/B08T5N8QPT">echo frames</a></li>
                 <li><a href="https://dnd.wizards.com/">Dunegons And Dragons</a></li>
+                <li><a href="data.html">data</a></li>
                </ul>
         </nav>
          <div id="conk">
@@ -27,7 +28,7 @@
         </div>
          <div id="donk">
             <h2 id="milko">Dunegons and dragons on the echo frames</h2>
-             <p id="pissy">We plan to make a single player dunegons and dragons app that plays bery similarly to this add here.</p>
+             <p id="pissy">We plan to make a single player dunegons and dragons app that plays bery<br> similarly to this add here.</p>
             <iframe id="milta" width="560" height="315" src="https://www.youtube.com/embed/BQl3T0uD5Aw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
