--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <nav role="main">
             <ul id="jongjong">
                 
-                <li><a href="webpage.html" class="pressed">about us and our product</a></li>
+                <li><a href="index.html" class="pressed">about us and our product</a></li>
                 <li><a href="https://www.amazon.com/Echo-Frames/dp/B08T5N8QPT">echo frames</a></li>
                 <li><a href="https://dnd.wizards.com/">Dunegons And Dragons</a></li>
                 <li><a href="data.html">data</a></li>
