--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
          <div id="donk">
             <h2 id="milko">Dunegons and dragons on the echo frames</h2>
-             <p id="pissy">We plan to make a single player dunegons and dragons app that plays bery<br> similarly to this add here.</p>
+             <p id="pissy">We plan to make a single player dunegons and dragons app that plays very<br> similarly to this add here.</p>
             <iframe id="milta" width="560" height="315" src="https://www.youtube.com/embed/BQl3T0uD5Aw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
