style for table

--- a/data.html
+++ b/data.html
@@ -13,9 +13,12 @@
             <li><a href="data.html" class="pressed">data</a></li>
            </ul>
     </nav>
+    <div id="bruy">
     <button id="charbutt">Get Data for Characters</button> 
-<table id="tableplace"></table>
+        <table id="tableplace"></table>
 
+
+</div>
 <script>
    document.getElementById('charbutt').addEventListener('click', (event) => {
     const ajaxParameters = new FormData;
