--- a/data.html
+++ b/data.html
@@ -9,7 +9,7 @@
             
             <li><a href="index.html" >about us and our product</a></li>
             <li><a href="https://www.amazon.com/Echo-Frames/dp/B08T5N8QPT">echo frames</a></li>
-            <li><a href="https://dnd.wizards.com/">Dunegons And Dragons</a></li>
+            <li><a href="https://dnd.wizards.com/">Dungeons And Dragons</a></li>
             <li><a href="data.html" class="pressed">data</a></li>
            </ul>
     </nav>
