--- a/index.html
+++ b/index.html
@@ -33,5 +33,15 @@
             <iframe id="milta" width="560" height="315" src="https://www.youtube.com/embed/BQl3T0uD5Aw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
+
+        
+
+        <div style="text-align: center;" id="feedback">
+<h2>feedback we have incorporated</h2>
+<p>1.displaying stats on the website via showing the characters, <br/>
+    2.rolls numbers for you via the dice rolling Intent, <br/>
+    3.weapons damage table shown on our data site for what dice should be rolled in the intent
+</p>
+        </div>
     </body>
 </html>
