--- a/data.html
+++ b/data.html
@@ -1,7 +1,15 @@
 <html>
 <head>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script id="ss" src="https://unpkg.com/simple-statistics@7.8.0/dist/simple-statistics.min.js"></script>
+    <script src="https://unpkg.com/d3-regression@1.3.10/dist/d3-regression.min.js"></script>
 
 <link rel="stylesheet" href="stylesh.css">
+<style>
+ 
+
+
+  </style>
 </head>
 <body>
     <nav role="main">
@@ -13,7 +21,13 @@
             <li><a href="data.html" class="pressed">data</a></li>
            </ul>
     </nav>
+    <div id="conk">
+        <h2 style="text-align: center;">weapons damage table</h2>
+    <img style="align-content: center;" id="bing" src="https://panzerleader.files.wordpress.com/2012/01/1e-weaponstable.jpg">
+    </div>
+    <div  id="target"></div>
     <div id="bruy">
+       
     <button id="charbutt">Get Data for Characters</button> 
         <table id="tableplace"></table>
 
@@ -64,7 +78,16 @@
                 document.getElementById('tableplace').innerHTML = displayTable}
               
    })})
+
+
+
+
+
 </script>
+
+
+
+
 </body>
 
 </html>
