--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <nav role="main" style="background-color: BC52DE;">
-        
+        <img src="portphoto.jpg" class="logo float-left">
         </nav>
     </body>
 </html>
