--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 <link rel="stylesheet" href="stylesh.css">
 <title>myles holley portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style type="text/css" id="operaUserStyle"></style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
     </head>
     <body>
-        <nav role="main" style="background-color: BC52DE;">
-        <img src="portphoto.jpg" class="logo float-left">
+        <nav role="navbar navbar-expand navbardark" style="background-color: BC52DE;">
+       <a class="navbar-brand" style="margin-left: 20px;" href="index.html">
+            <h1>Myles Holley</h1>
+       </a>
         </nav>
     </body>
 </html>
