--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     </head>
     <body>
-        <nav role="navbar navbar-expand navbardark" style="background-color: BC52DE;">
+        <nav role="navbar navbar-expand navbardark" style="background-color: #BC5d2E;">
        <a class="navbar-brand" style="margin-left: 20px;" href="index.html">
             <h1>Myles Holley</h1>
        </a>
