--- a/index.html
+++ b/index.html
@@ -2,20 +2,56 @@
 <html lang="en">
     <head>
 <link rel="stylesheet" href="stylesh.css">
+<meta charset="UTF-8">
 <title>myles holley portfolio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style type="text/css" id="operaUserStyle"></style>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    </head>
-    <body>
-        <nav role="navbar navbar-expand navbardark" style="background-color: #BC5d2E;">
-       <a class="navbar-brand" style="margin-left: 20px;" href="index.html">
-            <h1>Myles Holley</h1>
-       </a>
-        </nav>
-    </body>
-</html>
+   </head>
+   <body>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Myles Holley</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  
+    <!-- Main Content -->
+    <div class="container mt-5">
+      <h1>Welcome to Myles Holley's Portfolio</h1>
+      <p>Game Developer</p>
+  
+      <!-- Buttons -->
+      <div class="button-container mt-4">
+        <a class="btn btn-primary" href="about.html">About Me</a>
+        <a class="btn btn-success" href="projects.html">Projects</a>
+        <a class="btn btn-info" href="contact.html">Contact Me</a>
+      </div>
+    </div>
+  
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
+  </html>
+           
