--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link" href="projects.html">Projects/skills</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
@@ -37,7 +37,7 @@
   <div class="container mt-5">
     <h1>About Myles Holley</h1>
     <p>Game Developer with a passion for creating immersive gaming experiences.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis justo sed velit venenatis euismod ut nec est.</p>
+    <p>Has a speciality in virtual and augmented reality development</p>
   </div>
 
   <!-- Scripts -->
