--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link" href="projects.html">Projects/skills</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#">Contact</a>
@@ -39,9 +39,9 @@
 
     <!-- Contact Information -->
     <div class="contact-info">
-      <p>Phone: <span>(123) 456-7890</span></p>
-      <p>Email: <span>myles.holley@example.com</span></p>
-      <p>P.O. Box: <span>1234, Cityville, State, 56789</span></p>
+      <p>Phone: <span>(208) 995-7154</span></p>
+      <p>Email: <span>mholleycollege@gmail.com</span></p>
+      <p>linkden <span>www.linkedin.com/in/myles-holley-64315a245</span></p>
     </div>
   </div>
 
