--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- Buttons -->
       <div class="button-container mt-4">
         <a class="btn btn-primary" href="about.html">About Me</a>
-        <a class="btn btn-success" href="projects.html">Projects</a>
+        <a class="btn btn-success" href="projects.html">Projects/skills</a>
         <a class="btn btn-info" href="contact.html">Contact Me</a>
       </div>
     </div>
