--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="#">Projects/skills</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
