updated project stuff

--- a/index.html
+++ b/index.html
@@ -47,7 +47,25 @@
         <a class="btn btn-info" href="contact.html">Contact Me</a>
       </div>
     </div>
-  
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <img src="myles-holley-photo1.jpg" class="img-fluid" alt="Myles Holley Photo 1">
+      </div>
+      <div class="col-md-4 mb-4">
+        <img src="myles-holley-photo2.jpg" class="img-fluid" alt="Myles Holley Photo 2">
+      </div>
+      <div class="col-md-4 mb-4">
+        <img src="myles-holley-photo3.jpg" class="img-fluid" alt="Myles Holley Photo 3">
+      </div>
+      <div class="col-md-4 mb-4">
+        <img src="myles-holley-photo4.jpg" class="img-fluid" alt="Myles Holley Photo 4">
+      </div>
+      <div class="col-md-4 mb-4">
+        <img src="myles-holley-photo5.jpg" class="img-fluid" alt="Myles Holley Photo 5">
+      </div>
+    </div>
+  </div>
+</div>
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
