--- a/project2page.html
+++ b/project2page.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Contact Myles Holley</title>
-  <link rel="stylesheet" href="stylesh.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <title>Project 2 - Myles Holley</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Myles Holley</a>
+    <a class="navbar-brand" href="#">Myles Holley</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,10 +23,10 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects/skills</a>
+          <a class="nav-link" href="projects.html">Projects</a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Contact</a>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -35,28 +34,20 @@
 
   <!-- Main Content -->
   <div class="container mt-5">
-    <h1>Contact Myles Holley</h1>
-
-    <!-- Contact Information -->
-    <div class="contact-info">
-      <p>Phone: <span>(208) 995-7154</span></p>
-      <p>Email: <span>mholleycollege@gmail.com</span></p>
-      <p>linkden <span>www.linkedin.com/in/myles-holley-64315a245</span></p>
+    <h1>Project 2</h1>
+    <div class="row mt-4">
+      <div class="col-md-4 mb-4">
+        <img src="project2_photo1.jpg" class="img-fluid" alt="Project 2 Photo 1">
+      </div>
+      <div class="col-md-4 mb-4">
+        <img src="project1_photo2.jpg" class="img-fluid" alt="Project 2 Photo 2">
+      </div>
+      <div class="col-md-4 mb-4">
+        <img src="project1_photo3.jpg" class="img-fluid" alt="Project 2 Photo 3">
+      </div>
     </div>
+    <p>Brief description of Project 2.</p>
   </div>
-
-  <div class="row mt-5">
-    <div class="col-md-4 mb-4">
-      <img src="photo1.jpg" class="img-fluid" alt="Photo 1">
-    </div>
-    <div class="col-md-4 mb-4">
-      <img src="photo2.jpg" class="img-fluid" alt="Photo 2">
-    </div>
-    <div class="col-md-4 mb-4">
-      <img src="photo3.jpg" class="img-fluid" alt="Photo 3">
-    </div>
-  </div>
-</div>
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
