--- a/about.html
+++ b/about.html
@@ -39,7 +39,40 @@
     <p>Game Developer with a passion for creating immersive gaming experiences.</p>
     <p>Has a speciality in virtual and augmented reality development</p>
   </div>
+  <div class="row mt-5">
+    <div class="col-md-6">
+      <img src="photo1.jpg" class="img-fluid" alt="Photo 1">
+    </div>
+    <div class="col-md-6">
+      <img src="photo2.jpg" class="img-fluid" alt="Photo 2">
+    </div>
+  </div>
+</div>
 
+  <footer class="bottom-navigation">
+    <div class="container">
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavFooter" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        <div class="collapse navbar-collapse" id="navbarNavFooter">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </footer>
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
