--- a/project2page.html
+++ b/project2page.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Project 2 - Myles Holley</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="stylesh.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -37,13 +38,19 @@
     <h1>Project 2</h1>
     <div class="row mt-4">
       <div class="col-md-4 mb-4">
+        <a href="project2_photo1.jpg" data-lightbox="project2">
         <img src="project2_photo1.jpg" class="img-fluid" alt="Project 2 Photo 1">
+        </a>
       </div>
       <div class="col-md-4 mb-4">
+        <a href="project2_photo2.jpg" data-lightbox="project2">
         <img src="project1_photo2.jpg" class="img-fluid" alt="Project 2 Photo 2">
+        </a>
       </div>
       <div class="col-md-4 mb-4">
+        <a href="project2_photo3.jpg" data-lightbox="project2"></a> 
         <img src="project1_photo3.jpg" class="img-fluid" alt="Project 2 Photo 3">
+      </a>
       </div>
     </div>
     <p>Brief description of Project 2.</p>
@@ -73,6 +80,7 @@
     </div>
   </footer>
   <!-- Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
