--- a/projects.html
+++ b/projects.html
@@ -43,9 +43,9 @@
       <div class="card">
         <img src="project1.jpg" class="card-img-top" alt="Project 1 Image">
         <div class="card-body">
-          <h5 class="card-title">Project 1</h5>
-          <p class="card-text">Description of Project 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Learn More</a>
+          <h5 class="card-title">Amazon echo frames and amazon web services</h5>
+          <p class="card-text"></p>
+          <a href="project1page.html" class="btn btn-primary">Learn More</a>
         </div>
       </div>
 
