--- a/project1page.html
+++ b/project1page.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Project 1 - Myles Holley</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="stylesh.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-
+  
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Myles Holley</a>
@@ -37,16 +38,33 @@
     <h1>Project 1</h1>
     <div class="row mt-4">
       <div class="col-md-4 mb-4">
-        <img src="project1_photo1.jpg" class="img-fluid" alt="Project 1 Photo 1">
+        <a href="portfolioproject1.png" data-lightbox="project1">
+        <img src="portfolioproject1.png" class="img-fluid" alt="Project 1 Photo 1">
+        </a>
       </div>
       <div class="col-md-4 mb-4">
-        <img src="project1_photo2.jpg" class="img-fluid" alt="Project 1 Photo 2">
+        <a href="portfolioproject1photo2.png" data-lightbox="project1">
+        <img src="portfolioproject1photo2.png" class="img-fluid" alt="Project 1 Photo 2">
+        </a>
       </div>
       <div class="col-md-4 mb-4">
-        <img src="project1_photo3.jpg" class="img-fluid" alt="Project 1 Photo 3">
+        <a href="portfolioproject1photo3.png" data-lightbox="project1"></a>
+        <img src="portfolioproject1photo3.png" class="img-fluid" alt="Project 1 Photo 3">
+      </a>
+        </div>
       </div>
     </div>
-    <p>Brief description of Project 1.</p>
+   <!-- Video Section -->
+   <div class="row mt-5">
+    <div class="col-md-12">
+      <h2>amazon web services pitch video</h2>
+      <div class="embed-responsive embed-responsive-16by9">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/SnZWO4ONuv4?si=yHW-zB05zxBNtL2a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+   </div>
+    </div>
+  </div>
+</div>
+
   </div>
   <footer class="bottom-navigation">
     <div class="container">
@@ -73,6 +91,7 @@
     </div>
   </footer>
   <!-- Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
