--- a/project3page.html
+++ b/project3page.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Project 3 - Myles Holley</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="stylesh.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-
+  
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Myles Holley</a>
@@ -87,13 +88,19 @@
     <h1>Project 1</h1>
     <div class="row mt-4">
       <div class="col-md-4 mb-4">
+        <a href="project3_photo1.jpg" data-lightbox="project3">
         <img src="project1_photo1.jpg" class="img-fluid" alt="Project 1 Photo 1">
+        </a>
       </div>
       <div class="col-md-4 mb-4">
+        <a href="project3_photo2.jpg" data-lightbox="project3">
         <img src="project1_photo2.jpg" class="img-fluid" alt="Project 1 Photo 2">
+        </a>
       </div>
       <div class="col-md-4 mb-4">
+        <a href="project3_photo3.jpg" data-lightbox="project3">
         <img src="project1_photo3.jpg" class="img-fluid" alt="Project 1 Photo 3">
+        </a>
       </div>
     </div>
     <p>Brief description of Project 1.</p>
@@ -123,6 +130,8 @@
     </div>
   </footer>
   <!-- Scripts -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
