added card function for project page

--- a/project2page.html
+++ b/project2page.html
@@ -35,7 +35,7 @@
 
   <!-- Main Content -->
   <div class="container mt-5">
-    <h1>Project sakura-Torchfire Studios</h1>
+    <h1>unity and unreal engine work</h1>
     <div class="row mt-4">
       <div class="col-md-4 mb-4">
         <a href="project2_photo1.jpg" data-lightbox="project2">
@@ -53,7 +53,7 @@
       </a>
       </div>
     </div>
-    <p>I Worked as lighting lead in the project sakura Game</p>
+    <p></p>
   </div>
   <footer class="bottom-navigation">
     <div class="container">
