--- a/project3page.html
+++ b/project3page.html
@@ -33,55 +33,7 @@
     </div>
   </nav>
 
-  <!-- Main Content -->
-  <div class="container mt-5">
-    <h1>Project 3</h1>
-    <div class="row mt-4">
-      <div class="col-md-4 mb-4">
-        <img src="project1_photo1.jpg" class="img-fluid" alt="Project 3 Photo 1">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="project1_photo2.jpg" class="img-fluid" alt="Project 3 Photo 2">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="project1_photo3.jpg" class="img-fluid" alt="Project 3 Photo 3">
-      </div>
-    </div>
-    <p>Brief description of Project 3.</p>
-  </div>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Project 1 - Myles Holley</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Myles Holley</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  
 
   <!-- Main Content -->
   <div class="container mt-5">
@@ -93,13 +45,13 @@
         </a>
       </div>
       <div class="col-md-4 mb-4">
-        <a href="project3_photo2.jpg" data-lightbox="project3">
-        <img src="project1_photo2.jpg" class="img-fluid" alt="Project 1 Photo 2">
+        <a href="swidtimag2.png" data-lightbox="project3">
+        <img src="swidtimag2.png" class="img-fluid" alt="Project 3 photo 2">
         </a>
       </div>
       <div class="col-md-4 mb-4">
-        <a href="project3_photo3.jpg" data-lightbox="project3">
-        <img src="project1_photo3.jpg" class="img-fluid" alt="Project 1 Photo 3">
+        <a href="swiftimage3.png" data-lightbox="project3">
+        <img src="swiftimage3.png" class="img-fluid" alt="Project 3 Photo 3">
         </a>
       </div>
 
