--- a/index.html
+++ b/index.html
@@ -42,30 +42,28 @@
   
       <!-- Buttons -->
       <div class="button-container mt-4">
-        <a class="btn btn-primary" href="about.html">About Me</a>
-        <a class="btn btn-success" href="projects.html">Projects/skills</a>
-        <a class="btn btn-info" href="contact.html">Contact Me</a>
+        <a class="btn btn-primary" href="about.html" style="background-color: steelblue;">About Me</a>
+        <a class="btn btn-success" href="projects.html" style="background-color: steelblue;">Projects/skills</a>
+        <a class="btn btn-info" href="contact.html" style="background-color: steelblue;">Contact Me</a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-4 mb-4">
-        <img src="myles-holley-photo1.jpg" class="img-fluid" alt="Myles Holley Photo 1">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="myles-holley-photo2.jpg" class="img-fluid" alt="Myles Holley Photo 2">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="myles-holley-photo3.jpg" class="img-fluid" alt="Myles Holley Photo 3">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="myles-holley-photo4.jpg" class="img-fluid" alt="Myles Holley Photo 4">
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="myles-holley-photo5.jpg" class="img-fluid" alt="Myles Holley Photo 5">
-      </div>
-    </div>
-  </div>
-
+    <div class="container mt-5">
+      <div class="row mt-4">
+        <div class="col-md-4 mb-4">
+          <a href="" data-lightbox="indexpho">
+          <img src="" class="img-fluid" alt="index photo 1">
+          </a>
+        </div>
+        <div class="col-md-4 mb-4">
+          <a href="" data-lightbox="indexpho">
+          <img src="" class="img-fluid" alt="index photo 2">
+          </a>
+        </div>
+        <div class="col-md-4 mb-4">
+          <a href="" data-lightbox="indexpho">
+          <img src="" class="img-fluid" alt="index photo 3">
+          </a>
+        </div>
 
 </div>
 <footer class="bottom-navigation">
