--- a/projects.html
+++ b/projects.html
@@ -36,39 +36,62 @@
   <!-- Main Content -->
   <div class="container mt-5">
     <h1>My Projects</h1>
-
+    <div class="row mt-4">
     <!-- Project Cards -->
-    <div class="card-deck mt-4">
+    <div class="col-md-4 mb-4">
+   
       <!-- Project 1 -->
-      <div class="card">
-        <img src="project1.jpg" class="card-img-top" alt="Project 1 Image">
-        <div class="card-body">
+      <div class="card h-100 d-flex flex-column">
+        <img src="echoframes.jpg" class="card-img-top" alt="Project 1 Image">
+        <div class="card-body d-flex flex-column">
           <h5 class="card-title">Amazon echo frames and amazon web services</h5>
-          <p class="card-text"></p>
-          <a href="project1page.html" class="btn btn-primary">Learn More</a>
+          <a href="project1page.html" class="btn btn-primary mt-auto" style="background-color: steelblue;">Learn More</a>
         </div>
       </div>
+</div>
 
       <!-- Project 2 -->
-      <div class="card">
-        <img src="project2.jpg" class="card-img-top" alt="Project 2 Image">
-        <div class="card-body">
-          <h5 class="card-title">Project 2</h5>
-          <p class="card-text">Description of Project 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Learn More</a>
-        </div>
+      <div class="col-md-4 mb-4">
+     
+      <div class="card h-100 d-flex flex-column">
+        <img src="unityunrealenlogo.jpg" class="card-img-top" alt="Project 2 Image">
+        <div class="card-body d-flex flex-column">
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <h5 class="card-title mb-auto">Unity and Unreal engine work</h5>
+          <a href="project2page.html" class="btn btn-primary" style="background-color: steelblue;">Learn More</a>
+       
+       </div>
       </div>
+</div>
 
       <!-- Project 3 -->
-      <div class="card">
-        <img src="project3.jpg" class="card-img-top" alt="Project 3 Image">
-        <div class="card-body">
-          <h5 class="card-title">Project 3</h5>
-          <p class="card-text">Description of Project 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#" class="btn btn-primary">Learn More</a>
+      <div class="col-md-4 mb-4">
+      <div class="card  h-100 d-flex flex-column">
+        <img src="swiftimage.jpg" class="card-img-top" alt="Project 3 Image">
+        <div class="card-body d-flex flex-column">
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <p class="card-text"></p>
+          <h5 class="card-title mb-auto">swift accesibility design</h5>
+          <a href="project3page.html" class="btn btn-primary" style="background-color: steelblue;">Learn More</a>
         </div>
       </div>
     </div>
+  </div>
   </div>
   <footer class="bottom-navigation">
     <div class="container">
