--- a/about.html
+++ b/about.html
@@ -6,6 +6,12 @@
   <title>About Myles Holley</title>
   <link rel="stylesheet" href="stylesh.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    body {
+      background-color: #222;
+      color: steelblue; /* Blue color for the text */
+    }
+  </style>
 </head>
 <body>
 
@@ -38,8 +44,8 @@
     <h1>About Myles Holley</h1>
     <p>Game Developer with a passion for creating immersive gaming experiences.</p>
     <p>Has a speciality in virtual and augmented reality development</p>
-    <p>Raised in Boise, Id, and attended boise state university</p>
-    <p>I am an Avid Dunegons and dragons enjoyer</p>
+    <p>Raised in Boise, Id, and am currently attending boise state university</p>
+    <p>I am an Avid Dunegons and Dragons enjoyer</p>
   </div>
   <div class="row mt-5">
     <div class="col-md-6">
