--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <style type="text/css" id="operaUserStyle"></style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<style>
+  body {
+    background-color: #222;
+    color: steelblue;
+  }
+</style>
    </head>
    <body>
 
