--- a/project1page.html
+++ b/project1page.html
@@ -6,6 +6,12 @@
   <title>Project 1 - Myles Holley</title>
   <link rel="stylesheet" href="stylesh.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    body {
+      background-color: #222;
+      color: steelblue;
+    }
+  </style>
 </head>
 <body>
   
