--- a/index.html
+++ b/index.html
@@ -86,16 +86,12 @@
       </div>
     </div>
  
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://unpkg.com/three@<version>/build/three.module.js",
-          "three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
-        }
-      }
-    </script>
- <!-- Container for the 3D scene -->
- <script type="module" src="/main.js"></script>
+    <main>
+      <div id="container3D"></div>
+    </main>
+
+    <script type="module"  src="main.js"></script>
+  
 
  <!-- credits for model : "D20 Dice (W20 Würfel) 3D model [FREE]" (https://skfb.ly/onUnH) by VertexDon is licensed under Creative Commons Attribution-ShareAlike (http://creativecommons.org/licenses/by-sa/4.0/).-->
  
