--- a/index.html
+++ b/index.html
@@ -85,10 +85,20 @@
         <a class="btn btn-info" href="contact.html" style="background-color: steelblue;">Contact Me</a>
       </div>
     </div>
- 
-    <main>
+ <div>
+
+ </div>
+
+ <div>
+
+ </div>
+
+ <div>
+  
+ </div>
+    
       <div id="container3D"></div>
-    </main>
+    
 
     <script type="module"  src="main.js"></script>
   
