updated sections on index

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     </nav>
   
     <!-- Main Content -->
+    <section>
     <div class="container mt-5">
       <h1 style="font-family: 'Montserrat', sans-serif;">Myles Holley</h1>
       <p style="font-family: 'Montserrat', sans-serif;">Immersive Designer</p>
@@ -85,10 +86,32 @@
         <a class="btn btn-info" href="contact.html" style="background-color: steelblue;">Contact Me</a>
       </div>
     </div>
+    </section>
+
+    <section>
+      <div>
+        <h1>
+
+        </h1>
+        <p>
+
+        </p>
+      </div>
+      <div>
+        <h1>
+
+        </h1>
+        <p>
+
+        </p>
+      </div>
+    </section>
+
+  <section>
  <div class="container mt-5" >
   <div id="container3D"></div>
  </div>
-
+  </section>
     
       
 
