--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
    
   
    <section>
-    <div class="container mt-5" >
+    <div >
      <div id="container3D"></div>
     </div>
      </section>
