--- a/index.html
+++ b/index.html
@@ -117,8 +117,18 @@
    
   
    <section>
-    <div >
-     <div id="container3D"></div>
+    <div class="container mt-5" >
+      <div class="col-md-4 mb-4">
+        <p>
+
+        </p>
+      </div>
+     <div class="col-md-4 mb-4" id="container3D"></div>
+    </div>
+    <div class="col-md-4 mb-4"> 
+      <p>
+
+      </p>
     </div>
      </section>
      <script type="module"  src="main.js"></script>
