--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
    
   
    <section>
-    <div class="container mt-5" >
+    <div >
       
-     <div class="col-md-12 mb-12" id="container3D"></div>
+     <div id="container3D"></div>
     </div>
    
      </section>
