--- a/contact.html
+++ b/contact.html
@@ -66,12 +66,42 @@
     <!-- Contact Information -->
     <div class="contact-info">
       <p>Phone: <span>(208) 995-7154</span></p>
-      <p>Email: <span>mholleycollege@gmail.com</span></p>
       <p>linkden <span>www.linkedin.com/in/myles-holley-64315a245</span></p>
     </div>
   </div>
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    (function(){
+      emailjs.init("o_vI2BhyEN2dIKHMi"); // Replace YOUR_USER_ID with your actual user ID from EmailJS
+    })();
+  </script>
 
-
+<form id="contact-form">
+  <input type="text" name="user_name" placeholder="Your Name" required><br>
+  <input type="email" name="user_email" placeholder="Your Email" required><br>
+  <textarea name="message" placeholder="Your Message" required></textarea><br>
+  <button type="submit">Send Message</button>
+</form>
+<script>
+  document.getElementById('contact-form').addEventListener('submit', function(event) {
+    event.preventDefault();
+    // Collect form data
+    var formData = new FormData(this);
+    // Send email
+    emailjs.sendForm('service_d5x2g0q', 'template_tdykk1f', formData)
+      .then(function(response) {
+        console.log('Email sent successfully:', response);
+        // Optionally, show a success message to the user
+        alert('Your message has been sent successfully!');
+        // Clear the form
+        document.getElementById('contact-form').reset();
+      }, function(error) {
+        console.error('Email send failed:', error);
+        // Optionally, show an error message to the user
+        alert('Sorry, there was an error sending your message. Please try again later.');
+      });
+  });
+</script>
 
 
 <footer class="bottom-navigation">
