--- a/contact.html
+++ b/contact.html
@@ -69,19 +69,28 @@
       <p>linkden <span>www.linkedin.com/in/myles-holley-64315a245</span></p>
     </div>
   </div>
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script>
-    (function(){
-      emailjs.init("o_vI2BhyEN2dIKHMi"); // Replace YOUR_USER_ID with your actual user ID from EmailJS
-    })();
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script type="text/javascript">
+      (function() {
+          // https://dashboard.emailjs.com/admin/account
+          emailjs.init({
+            publicKey: "o_vI2BhyEN2dIKHMi",
+          });
+      })();
   </script>
-
-<form id="contact-form">
-  <input type="text" name="user_name" placeholder="Your Name" required><br>
-  <input type="email" name="user_email" placeholder="Your Email" required><br>
-  <textarea name="message" placeholder="Your Message" required></textarea><br>
-  <button type="submit">Send Message</button>
+<div class="container mt-5">
+  <form id="contact-form">
+    <!-- To simplify the tutorial, the value is static. -->
+    <input type="hidden" name="contact_number" value="697483">
+    <label>Name</label>
+    <input type="text" name="user_name">
+    <label>Email</label>
+    <input type="email" name="user_email">
+    <label>Message</label>
+    <textarea name="message"></textarea>
+    <input type="submit" value="Send">
 </form>
+</div>
 <script>
   document.getElementById('contact-form').addEventListener('submit', function(event) {
     event.preventDefault();
