--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     <p>Has a speciality in virtual and augmented reality development</p>
     <p>Raised in Boise, Id, and am currently attending boise state university</p>
     <p>I am an Avid Dunegons and Dragons enjoyer</p>
-    <p> I also enjoy playing basketball and am a washington wizards fan</p>
+    <p> I also enjoy playing basketball and am a Washington Wizards fan</p>
   </div>
   <div class="row mt-5">
     <div class="col-md-6">
