jack polifka update

--- a/project1page.html
+++ b/project1page.html
@@ -64,8 +64,8 @@
     <h1>amazon web services & amazon echo frames</h1>
     <div class="row mt-4">
       <div class="col-md-4 mb-4">
-        <a href="portfolioproject1.png" data-lightbox="project1">
-        <img src="portfolioproject1.png" class="img-fluid" alt="Project 1 Photo 1">
+        <a href="" data-lightbox="project1">
+        <img src="" class="img-fluid" alt="Project 1 Photo 1">
         </a>
       </div>
       <div class="col-md-4 mb-4">
