changed index style and corrected spelling

--- a/contact.html
+++ b/contact.html
@@ -61,12 +61,12 @@
 
   <!-- Main Content -->
   <div class="container mt-5">
-    <h1>Contact Myles Holley</h1>
+    <h1>Contact me</h1>
 
     <!-- Contact Information -->
     <div class="contact-info">
       <p>Phone: <span>(208) 995-7154</span></p>
-      <p>linkden <span>www.linkedin.com/in/myles-holley-64315a245</span></p>
+      <p>linkedin <span>www.linkedin.com/in/myles-holley-64315a245</span></p>
     </div>
   </div>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
