added space for more photos

--- a/project2page.html
+++ b/project2page.html
@@ -78,6 +78,23 @@
         <img src="project1_photo3.jpg" class="img-fluid" alt="Project 2 Photo 3">
       </a>
       </div>
+      <div class="row mt-4">
+        <div class="col-md-4 mb-4">
+          <a href="project2_photo4.jpg" data-lightbox="project2">
+          <img src="project2_photo4.jpg" class="img-fluid" alt="Project 2 Photo 4">
+          </a>
+        </div>
+        <div class="col-md-4 mb-4">
+          <a href="project2_photo5.jpg" data-lightbox="project2">
+          <img src="project1_photo5.jpg" class="img-fluid" alt="Project 2 Photo 5">
+          </a>
+        </div>
+        <div class="col-md-4 mb-4">
+          <a href="project2_photo6.jpg" data-lightbox="project2"></a> 
+          <img src="project1_photo6.jpg" class="img-fluid" alt="Project 2 Photo 6">
+        </a>
+        </div>
+
     </div>
     <p></p>
   </div>
