--- a/project2page.html
+++ b/project2page.html
@@ -31,6 +31,18 @@
       
     }
 
+    /* Custom styles for the photo */
+    .img-container {
+      position: relative;
+      overflow: hidden;
+    }
+    .img-container img {
+      transition: transform 0.3s ease;
+    }
+    .img-container:hover img {
+      transform: scale(1.1); /* Increase the size of the image on hover */
+    }
+
   </style>
 </head>
 <body>
@@ -63,38 +75,62 @@
   <div class="container mt-5">
     <h1>unity and unreal engine work</h1>
     <div class="row mt-4">
-      <div class="col-md-4 mb-4">
-        <a href="project2_photo1.jpg" data-lightbox="project2">
-        <img src="project2_photo1.jpg" class="img-fluid" alt="Project 2 Photo 1">
+      <div class="col-md-4 mb-4 img-container" >
+        <a href="project2photo1.png" data-lightbox="project2">
+        <img src="project2photo1.png" class="img-fluid" alt="Project 2 Photo 1">
         </a>
       </div>
-      <div class="col-md-4 mb-4">
-        <a href="project2_photo2.jpg" data-lightbox="project2">
-        <img src="project1_photo2.jpg" class="img-fluid" alt="Project 2 Photo 2">
+      <div class="col-md-4 mb-4 img-container">
+        <a href="project2photo2.png" data-lightbox="project2">
+        <img src="project2photo2.png" class="img-fluid" alt="Project 2 Photo 2">
         </a>
       </div>
-      <div class="col-md-4 mb-4">
-        <a href="project2_photo3.jpg" data-lightbox="project2"></a> 
-        <img src="project1_photo3.jpg" class="img-fluid" alt="Project 2 Photo 3">
+      <div class="col-md-4 mb-4 img-container">
+        <a href="project2photo3.png" data-lightbox="project2"></a> 
+        <img src="project2photo3.png" class="img-fluid" alt="Project 2 Photo 3">
       </a>
       </div>
+      </div>
+      
+
       <div class="row mt-4">
-        <div class="col-md-4 mb-4">
-          <a href="project2_photo4.jpg" data-lightbox="project2">
-          <img src="project2_photo4.jpg" class="img-fluid" alt="Project 2 Photo 4">
+        <div class="col-md-4 mb-4 img-container">
+          <a href="project2photo4.png" data-lightbox="project2">
+          <img src="project2photo4.png" class="img-fluid" alt="Project 2 Photo 4">
           </a>
         </div>
-        <div class="col-md-4 mb-4">
-          <a href="project2_photo5.jpg" data-lightbox="project2">
-          <img src="project1_photo5.jpg" class="img-fluid" alt="Project 2 Photo 5">
+        <div class="col-md-4 mb-4 img-container">
+          <a href="project2photo5.png" data-lightbox="project2">
+          <img src="project2photo5.png" class="img-fluid" alt="Project 2 Photo 5">
           </a>
         </div>
-        <div class="col-md-4 mb-4">
-          <a href="project2_photo6.jpg" data-lightbox="project2"></a> 
-          <img src="project1_photo6.jpg" class="img-fluid" alt="Project 2 Photo 6">
+        <div class="col-md-4 mb-4 img-container">
+          <a href="project2photo6.png" data-lightbox="project2"></a> 
+          <img src="project2photo6.png" class="img-fluid" alt="Project 2 Photo 6">
         </a>
         </div>
 
+
+
+    </div>
+
+    <div class="row mt-4">
+      <div class="col-md-4 mb-4 img-container">
+        <a href="project2photo7.png" data-lightbox="project2">
+        <img src="project2photo7.png" class="img-fluid" alt="Project 2 Photo 7">
+        </a>
+      </div>
+      <div class="col-md-4 mb-4 img-container">
+        <a href="project2photo8.png" data-lightbox="project2">
+        <img src="project2photo8.png" class="img-fluid" alt="Project 2 Photo 8">
+        </a>
+      </div>
+      <div class="col-md-4 mb-4 img-container">
+        <a href="project2photo9.png" data-lightbox="project2"></a> 
+        <img src="project2photo9.png" class="img-fluid" alt="Project 2 Photo 9">
+      </a>
+      </div>
+      </div>
     </div>
     <p></p>
   </div>
