--- a/project1page.html
+++ b/project1page.html
@@ -73,7 +73,7 @@
 
   <!-- Main Content -->
   <div class="container mt-5">
-    <h1>amazon web services & amazon echo frames</h1>
+    <h1>Amazon Web Services & Amazon Echo Frames</h1>
     <div class="row mt-4">
       <div class="col-md-4 mb-4 img-container">
         <a href="amazonphoto1.png" data-lightbox="project1">
@@ -95,7 +95,7 @@
    <!-- Video Section -->
    <div class="row mt-5">
     <div class="col-md-12">
-      <h2>amazon web services pitch video</h2>
+      <h2>Amazon Web Services pitch video</h2>
       <div class="embed-responsive embed-responsive-16by9">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/SnZWO4ONuv4?si=yHW-zB05zxBNtL2a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
    </div>
