--- a/project2page.html
+++ b/project2page.html
@@ -73,7 +73,7 @@
 
   <!-- Main Content -->
   <div class="container mt-5">
-    <h1>unity and unreal engine work</h1>
+    <h1>Unity and Unreal Engine work</h1>
     <div class="row mt-4">
       <div class="col-md-4 mb-4 img-container" >
         <a href="project2photo1.png" data-lightbox="project2">
