--- a/project3page.html
+++ b/project3page.html
@@ -95,7 +95,7 @@
     </div>
     <div class="row mt-5">
       <div class="col-md-12">
-        <h2>swift accessibility design portfolio video</h2>
+        <h2>Swift accessibility design portfolio video</h2>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/lZ_uSn2nhaQ?si=_iY0X6fSEEOd3WGY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
