--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
       <div class="card h-100 d-flex flex-column">
         <img src="echoframes.jpg" class="card-img-top" alt="Project 1 Image">
         <div class="card-body d-flex flex-column">
-          <h5 class="card-title">Amazon echo frames and amazon web services</h5>
+          <h5 class="card-title">Amazon Echo Frames and Amazon Web Services</h5>
           <a href="project1page.html" class="btn btn-primary mt-auto" style="background-color: steelblue;">Learn More</a>
         </div>
       </div>
@@ -112,7 +112,7 @@
           <p class="card-text"></p>
           <p class="card-text"></p>
           <p class="card-text"></p>
-          <h5 class="card-title mb-auto">swift accesibility design</h5>
+          <h5 class="card-title mb-auto">Swift accesibility design</h5>
           <a href="project3page.html" class="btn btn-primary" style="background-color: steelblue;">Learn More</a>
         </div>
       </div>
