--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       background-color: #222;
       color: steelblue;
       margin: 0;
-     overflow: scroll;
+     overflow:visible;
     }
     canvas {
       display: block;
@@ -56,7 +56,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100%; /* Occupy full height of the button section */
+     height: 100%;
     }
   </style>
 
@@ -102,11 +102,10 @@
       </div>
       <!-- Buttons -->
       <div class="col-md-6">
-      <div class="d-flex flex-column" style="height: 100%;" >
-        <div  class="button-center flex-grow-1 d-flex  ">
-        <a class="btn btn-custom btn-lg mb-3  flex-grow-1 " href="about.html" style="background-color: steelblue;">About Me</a>
-        <a class="btn btn-custom btn-lg mb-3  flex-grow-1" href="projects.html" style="background-color: steelblue;">Projects/skills</a>
-        <a class="btn btn-custom btn-lg mb-3  flex-grow-1" href="contact.html" style="background-color: steelblue;">Contact Me</a>
+        <div  class="button-center  text-center ">
+        <a class="btn btn-custom btn-lg mr-3   " href="about.html" style="background-color: steelblue;">About Me</a>
+        <a class="btn btn-custom btn-lg mr-3  " href="projects.html" style="background-color: steelblue;">Projects/skills</a>
+        <a class="btn btn-custom btn-lg mr-3 " href="contact.html" style="background-color: steelblue;">Contact Me</a>
       </div>
       </div>
       </div>
