--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,7 @@
     <div class="contact-info">
       <p>Phone: <span>(208) 995-7154</span></p>
       <p>linkedin <span>www.linkedin.com/in/myles-holley-64315a245</span></p>
+      <p><span><a href="https://drive.google.com/drive/folders/1-U7M_pr-Vk-6jE7LkpnH7sLGJ1g8vQfd?usp=drive_link">Google Drive Portfolio link</a></span></p>
     </div>
   </div>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
