--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     <h1>About Myles Holley</h1>
     <p>Game Developer with a passion for creating immersive gaming experiences.</p>
     <p>Has a speciality in virtual and augmented reality development</p>
-    <p>Raised in Boise, Idaho, and i graduated from Boise State University</p>
+    <p>Raised in Boise, Idaho, and I graduated from Boise State University</p>
     <p>I am an Avid Dunegons and Dragons enjoyer</p>
     <p> I also enjoy playing basketball and am a Washington Wizards fan</p>
   </div>
