changed linkedin to hyperlink

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
     <!-- Contact Information -->
     <div class="contact-info">
       <p>Phone: <span>(208) 995-7154</span></p>
-      <p>linkedin <span>www.linkedin.com/in/myles-holley-64315a245</span></p>
+      <p><span><a href="www.linkedin.com/in/myles-holley-64315a245" style="color: steelblue;">Linkedin</a></span></p>
     <p><span><a href="https://drive.google.com/drive/folders/1-U7M_pr-Vk-6jE7LkpnH7sLGJ1g8vQfd?usp=drive_link" style="color: steelblue;">Google Drive Portfolio link</a></span></p>
     </div>
   </div>
